AUGREL/src/objects/Manual_Cure_Request__c.object
<CustomObject>
    <description>SRC: TFS AB Requirements
INT: ETL will pull the data and update the consumed flag
Trans: Manual Cure workflow
BU: Collections
FD: To store the manual cure requests records which will be consumed by ETL</description>
    <fields>
        <fullName>AcctNumber__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the CO Host Account Number</description>
        <label>Acct #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the borrower full name from FA</description>
        <label>Borrower</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the comments entered by user on flow.</description>
        <label>Comments</label>
        <length>450</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consumed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To determine whether record has been consumed by ETL or not.</description>
        <label>Consumed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the recommended form</description>
        <label>Form</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the answer for  &apos;Why is a manual Cure required?&apos; from flow</description>
        <label>Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the current data/time when request came</description>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <description>SRC: TFS AB6 Requirement
INT: ETL will pull the data and update the consumed flag 
Trans: Manual Cure workflow 
BU: Collections
FD: To store the full name of user running the flow.</description>
        <label>Requestor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Manual Cure Request</label>
    <nameField>
        <displayFormat>MCR-{0000}</displayFormat>
        <label>Manual Cure Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Cure Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>